--- a/parc/src/assets/i18n/fr.json
+++ b/parc/src/assets/i18n/fr.json
@@ -32,5 +32,16 @@
     "WROTE": "a écrit",
     "TITLE": "Critiques pour l'attraction",
     "ANONYMOUS": "Anonyme"
+  },
+  "CRITIC_DIALOG": {
+    "TITLE": "Ajout d'une critique",
+    "NAME": "Nom",
+    "SURNAME": "Prénom",
+    "COMMENT": "Commentaire",
+    "RATING": "Note",
+    "CANCEL": "Annuler",
+    "OPTIONAL": "Optionnel",
+    "RATING_ERROR": "La note doit être être comprise entre 0 et 20",
+    "COMMENT_ERROR": "Le commentaire est obligatoire"
   }
 }
