--- a/parc/src/assets/i18n/en.json
+++ b/parc/src/assets/i18n/en.json
@@ -30,7 +30,7 @@
   "SAVE": "Save",
   "CRITICS_PAGE": {
     "WROTE": "wrote",
-    "TITLE": "Attraction critics",
+    "TITLE": "Attraction critics for",
     "ANONYMOUS": "Anonymous"
   },
   "CRITIC_DIALOG": {
